--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = DEFAULT AGENT
+USERAGENT = IR F19 uci-93172696, uci- , uci-
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
