--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = IR F19 uci-93172696, uci-44184334, uci-95283007
+USERAGENT = IR UF23 93172696,44184334,95283007
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
